deployment halt
